--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a onclick="lib.showBooks()">Books</a> 
       <a onclick="lib.showVisitors()">Visitors</a>
       <a onclick="lib.showCards()">Cards</a>
-      <a onclick="lib.showStatistics()">Statitics</a>
+      <a onclick="lib.showStatistics()">Statistics</a>
      </nav>
 
      <div id="content">
